# logout

./: Cargo.toml  README.md
src/: lib.rs  logout.rs
